syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "org.myddd.extensions.media.api";
option java_outer_classname = "MediaApplicationProto";

//import "LowCodeOptions.proto";
//option (kunlun_service_name) = "MediaService";

package org.myddd.extensions.media.api;

service MediaApplication {
  rpc queryMedia(google.protobuf.StringValue) returns (MediaByte) {}
  rpc createMedia(MediaByte) returns (MediaDTO) {}
  rpc queryMediaIdByDigest(google.protobuf.StringValue) returns (MediaDTO) {}
}

message MediaByte {
  bytes content = 1;
  string name = 2;
  sint64 size = 3;
  string digest = 4;
}

message MediaDTO {
  string mediaId = 1;
}